# EjemplosPython

./: prueba.py
AttachDownloader/: .gitignore  AttachDownloader.spec  BUILD.md  CAMBIOS.md  CONFIG_GUIDE.md  Chuleta.md  GUIA_RAPIDA.md  IMPLEMENTACION_CONFIG.md  INICIO_RAPIDO.py  PROYECTO_RESUMEN.md  README.md  README_GMAIL.md  REFERENCIA_API.md  REFERENCIA_CONFIG_RAPIDA.md  RELEASE_NOTES.md  RESUMEN_IMPLEMENTACION.md  TROUBLESHOOTING.md  instalar.py  pyproject.toml  requirements.txt
AttachDownloader/config/: config.cfg
AttachDownloader/scripts/: build_exe.ps1
AttachDownloader/src/: __init__.py  main.py
AttachDownloader/src/gmail_downloader/: __init__.py  auth.py  config.py  downloader.py
AttachDownloader/tests/: test_gmail_downloader.py  test_main.py
hola-mundo-python/: .gitignore  Chuleta.md  GUIA_RAPIDA.md  INICIO_RAPIDO.py  PROYECTO_RESUMEN.md  README.md  README_GMAIL.md  REFERENCIA_API.md  TROUBLESHOOTING.md  ejemplos.py  instalar.py  requirements.txt  setup.sh
hola-mundo-python/src/: main.py
hola-mundo-python/src/gmail_downloader/: __init__.py  auth.py  downloader.py
hola-mundo-python/tests/: test_main.py
